Lots of Pictures

--- a/Engine.html
+++ b/Engine.html
@@ -112,11 +112,12 @@
       </div>
 	  
 	  <div class="image-left-container" width="430px">
-          <img src="img/29.jpg" class="image-left" width="400px">
-          <div class="image-text">
-            Test engines: 848cc 360 crank and 938cc 180 crank versions
-          </div>
-		  </div>
+			<div class="banner3">
+			<a target="_blank" href="img/292.jpg">
+			<img src="img/29.jpg" class="category-banner" alt="Engines"></a>
+			<span class="image-text-banner">Test engines: 848cc 360 crank and 938cc 180 crank versions</span>
+			</div>
+	    </div>
 	  
       <div class="grid-left-two">
         <h2 align="left">Slow to learn</h2>
@@ -128,11 +129,12 @@
       </div>
 	  
 	  <div class="image-right-container" width="420px">
-          <img src="img/067.jpg" class="image-right" width="400px">
-          <div class="image-text">
-            Machining the open deck supports on the bridgeport
-          </div>
-		  </div>
+	  <div class="banner3">
+			<a target="_blank" href="img/0672.jpg">
+			<img src="img/067.jpg" class="category-banner" alt="Open deck supports"></a>
+			<span class="image-text-banner">Machining the open deck supports on the bridgeport</span>
+			</div>
+	    </div>
 	  
       <div class="grid-wide-center">
         <h2 align="left">Testing</h2>
@@ -145,11 +147,12 @@
 		The 180 degree firing order is a vast improvement; silky smooth. The theory is the distance, consistency and balance of loads emitted from a combustion explosion to inertia at the wheel. Take a big v twin like a ktm; each piston is a dinner plate, with every nuclear sized explosion there is a huge momentary surge in torque exerted through the crankshaft, huge strain on the primary drive gears which quickly dissipates through normal mechanical losses as it finds it’s way through the gearbox down the chain to the back wheel by which time the next explosion has just taken place in the other cylinder, brace brace brace, here it comes, hold on tyre, are you ready. That surge in power graphically would form large waves of peaks and troughs which exerts greater spikes in torque to the back tyre to compensate for the fact it only fires 2 big dinner plate pistons which will wear it out faster and give higher chance of high siding. Now compare that to a 180 v4; each spike of power will be lower as each cylinder produces less power and the spread between them is narrower meaning less loss of inertia and greater consistency in reciprocating torque; producing a smoother, calmer, safer ride with a tyre that lasts longer. I think slowly the likes of Ducati and Honda are really sold on this. I’m pretty sure all motogp bikes are v4 or v5 for that reason, eventually all the road sports bikes will be V4’s (hopefully) and the world will be a better place
       </div>
 		<div class="image-left-container" width="430px">
-          <img src="img/paddockpic.jpg" class="image-left" width="400px">
-          <div class="image-text">
-            Discussing cam profiles with Guy
-          </div>
-		  </div>
+		<div class="banner3">
+			<a target="_blank" href="img/paddockpic2.jpg">
+			<img src="img/paddockpic.jpg" class="category-banner" alt="Open deck supports"></a>
+			<span class="image-text-banner">Machining the open deck supports on the bridgeport</span>
+			</div>
+		</div>
 		
 	  		<div class="grid-wide-center">
         <h2>Where next?</h2>
