--- a/Introduction.html
+++ b/Introduction.html
@@ -97,28 +97,28 @@
         <div class="grid-span">
           <h2>The history behind it</h2>
           Back in 2012, I started to think that having raced many modern bikes I was lacking the satisfaction I was hoping for when I started racing. Reluctant to pursue a relentless story of refinement I
-          started to think about what was missing; a relationship; the psychology of what was below me. What if I believed I could build something better; something purpose built for racing? To go against the grain and start enjoying racing again I purchased a £900 VFR800 that looked like it had been dredged
+          started to think about what was missing. What if I believed I could build something that would unlock that last tenth of commitment to go faster; something that was novel; experimental parts would be a risk but to go against the grain and start enjoying racing again I purchased a £900 VFR800 that looked like it had been dredged
           up out of the sea. My plan was to always build a frame but what it would look like and what materials were mere minor details; it was going to happen.<br>
           As the developments have progressed to this day; the only component I am still using from that bike is the fuel pump. The rest has been designed and made by myself using my own machines; predominantly manual with infrequent CNC work, along with extensive hand fabrication techniques such as welding, brazing, panel forming, vacuum infusion, clay moulding or for the few components I have
-          not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere. The styling and designs are all my own work; right from the oil pump to the fairings.
+          not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere. The styling and designs are all my own work; right from the oil pump to the fairings. Some components only see minutes of use only to be stored in wake of new improved designs.
           <div class="image-right-container" width="350px">
-            <img src="img/002.jpg" class="image-right" width="330px">
-            <div class="image-text">
-              The 1st build in Dec 2015
-            </div>
-          </div>
+		  <div class="banner3">
+			<a target="_blank" href="img/00222.jpg">
+			<img src="img/0022.jpg" class="category-banner" alt="2018 progress"></a>
+			<span class="image-text-banner">Developments in 2017</span>
+			</div>
+		  </div>
         </div>
         <div class="grid-left-two">
           <h2>The business</h2>
           A few years passed by where I persisted to run an engine tuning workshop and sub contract as an engineer to make up a busy 7 day working week. In that time I took the VFR in fairly standard trim; albeit with my own fairings, exhaust and mildly tuned engine to the
-          southern 100 amongst many club races for 2 years along with a 2nd modern bike to keep my eye in whilst I developed the VFR. The modern bikes kept me sharp for a while until a foolish crash in the Isle of Man in 2014 prompted me to make a change. When lying underneath the broken
-          Connor Cummins in the helicopter on the way Nobles hospital I decided that I was done with the boredom of modern racing; tired of the same 600’s and 1000’s being painted a different colour with excessively priced extras. The hay days of riding for teams and sponsers were long gone and 
+          southern 100 amongst many club races for 2 years along with a 2nd modern bike to keep my eye in whilst I developed the VFR. The modern bikes kept me sharp for a while until a foolish crash in the Isle of Man in 2014 prompted me to make a change. When lying
+          in the helicopter on the way Nobles hospital I decided that I was done with the boredom of modern racing; tired of the bikes with excessively priced bling. The hay days of riding for teams and sponsers were long gone and 
 		  at the time I had spent my hard earned money
           on my 1 year old Triumph 675R which got me to 15th in the southern 100 supersport 600 class before I got a chance to start pushing. <br>
 		  At the same time I had learned that working on other people's bikes and turning out tuned engines for club racers wasn't going to teach me more than I already knew.
           Time for change. You are what you do and to a certain extent; what you look like too. If I was going to work all day, every day; I would look like I had! If I only worked on everyone else’s bike I wouldn’t learn how to
-          build a chassis. On that thought; education has for quite some time been sold as a make or break life event; perhaps I am too cynical but the generations who have gone through University because they lost their way really stand out to me. There is also not enough flexibility to think outside the box. These days I believe we can all
-          stand taller without a University degree with what is available to us using resources online and networking along with motivation.
+          build a chassis. I see no point in making what others can make better with more finance. What money can't buy is innovation, which inside a competitive environment comes hand in hand with adversity, risk and failure. All of which are necessary to make the bad; better! 
           
         </div>
       </div>
@@ -131,16 +131,16 @@
             Developments in 2017
           </div>
         </div>
-        I returned from the Island and set about getting some T45 tube and some oxyacetylene and making a start. Drying the sand and compressing it in to produce a hot bend took a lot of patience and perhaps a year of many bends to get that real feel for what’s
-        going on. Every technical hurdle would spark a spell of research through textbooks but something I was always adamant of was to preserve my focus for first principle; steering away from any prior design or guidance that had been done before. If it exists I’m not interested in it. I needed to ensure my
-        designs and philosophy was fresh and untainted. That way I felt my mind would have a greater chance of conjuring up something new which wasn’t a result of computer simulation pre-configured, logical algorithms which exist based on old theories
-        (what’s the point – at best you would just be copying someone else!). The following years have given me a massive understanding for metallurgy, thermal dynamics, aerodynamics as well as honing my patience. 7 engines later and 3 rising rate suspension geometries have taught me a lot
+        Drying the sand and compressing it in to produce a hot bend in T45 tube took a lot of patience and perhaps a year of many bends to get that real feel for what’s
+        going on. Every technical hurdle would spark a spell of research through textbooks but something I was always adamant of was to preserve my focus for first principle; steering away from any prior design. If it exists I’m not interested.
+		That way I felt my mind would have a greater chance of conjuring up something new which wasn’t a result of computer simulation pre-configured, logical algorithms which exist based on old theories
+        (what’s the point – at best you would just be copying someone else!). The following years have given me a massive understanding for metallurgy, thermal dynamics, aerodynamics as well as honing my patience. Many engines later and 3 rising rate suspension geometries have taught me a lot
          and testing in the Isle of man has accelerated that rate 10 fold. Take a look at the technical journeys across the site and maybe look out for upcoming events… you’ll hear it coming for sure!
       <p>
 	  </div>
       <div class="grid-wide-center">
         <h2>So who am I?</h2>
-        My name is Tom Parkes, I’m 31 at the time of writing this and have been designing, building and racing my own chassis for 3 years. At slower speeds it’s the
+        My name is Tom Parkes, I’m 31 at the time of writing this and have been designing, building and racing my own chassis for 4 years. At slower speeds it’s the
         best bike I’ve ever ridden; smooth, solid and exciting, with a useful ability to steer wherever you want whilst your braking. The deeper I go, the more sense it makes; the big OEM’s are bound by performance metrics; fearful of research and
         design with professional rider’s balls bursting for success. Who would want to risk it all and fail?
 		Despite not getting on the podium at the toughest race tracks in the world; I believe it has huge potential and in what I can do.
