--- a/Swingarm.html
+++ b/Swingarm.html
@@ -122,47 +122,67 @@
           the flex. An improvement would be to make one side of the jaw short and rigid whilst reducing the length of the opposing jaw as much as possible in an effort to reduce both lateral and torsional flex.
         </div>
 		
-		<div class="image-left-container" width="400px">
-          <img src="img/concrete press.jpg" class="image-left" width="380px">
-          <div class="image-text">
-            Large concrete press with M16 clamp threads
-          </div>
-        </div>
+		<div class="banner">
+			<div class="banner2">
+			<a target="_blank" href="img/concrete_castin_box2.jpg">
+			<img src="img/concrete_casting_box.jpg" class="category-banner" alt="Casting box"></a>
+			<span class="image-text-banner">Basic casting box construction</span>
+			</div>
+			<div class="banner2">
+			<a target="_blank" href="img/ready_for_concrete2.jpg">
+			<img src="img/ready_for_concrete.jpg" class="category-banner" alt="Pull threads"></a>
+			<span class="image-text-banner">Guides for pull threads in place</span>
+			</div>	
+			<div class="banner2">	
+			<a target="_blank" href="img/concrete_press2.jpg">
+			<img src="img/concrete_press.jpg" class="category-banner" alt="Finished part"></a>
+			<span class="image-text-banner">Finished part fully formed</span>
+			</div>	
+			<div class="banner2">	
+			<a target="_blank" href="img/swingarm_rear2.jpg">
+			<img src="img/swingarm_rear.jpg" class="category-banner" alt="Ready to weld"></a>
+			<span class="image-text-banner">Part trimmed ready to weld</span>
+			</div>		
+			
+			
+		</div>
 		
         <div class="grid-wide-center">
           <h2>The new one</h2>
-          First job was to benchmark the stiffness of the standard one which I had braced. I made a quick jig out of scrap steel to mount it rigidly and employed the services of a calibrated father figure to lean against it. The theory was to mark a spot on
-          the floor about a meter away from the centre of the hub and get my dad to place his toes on the line. Then simply lean onto the swingarm, placing his hands on it first but allowing it to just touch his chest. I then took the measurements from the
-          wall both before and after. That was my benchmark; 2mm of deflection measured at the furthest point on the swingarm.
+          Most of the panels were quite easy to form on the beautiful set of 1950's sheet rollers I acquired. The 3mm thick sheet was just passed the limits of it's designed capability but I avoided doing any hot bending to compensate as I did not want the section thickness to be compromised.
+		  Each panel was mocked up in cardboard, plastercene and bodyfiller to begin with before being cut out of sheet 5083. The formed sections were made using an array of different press tools I constructed for the job.
+		  The steel press tools are the best but most expensive and time consuming to make. With a dowel in each corner to guide them together they worked first time.
+		  For the larger top and bottom formed panels I experimented with large concrete moulds which failed spectaculary the first few times; I used a Manitou as the press which suprisingly wasn't upto it. It was quite remarkable to watch a 16 tonne machine lift itself off the ground with my futile 2 foot square concrete press staring back at it without even flinching.
+		  We resorted to some crude agricutural engineering that day; a bucket of spuds dropped at speed with said Manitou. The Manitou just took off quicker, and then the concrete started to crack.
+		  The second revision was a much better success; 6 M16 threaded bars welded to spreader plates only just managed to form the bottom panel with me working overtime with a gas torch on the plate and a 2 foot breaker bar on the clamping nuts. Hot forming was the only way to go with such large complex forms. If it were a production part for a motorcycle you would see a press tool the size of your house to do these parts.
         </div>
-        <div class="image-right-container2">
+		
+		<div class="image-left-container" width="400px">
+          <img src="img/steel_pressings.jpg" class="image-left" width="380px">
+          <div class="image-text">
+            Simple but effective press tools
+          </div>
+        </div>
+		
+          <div class="grid-narrow-center">
+          <h2>The result</h2>
+          The new swingarm is constructed with 5083 sheet throughout purely because it avoids the
+          need for post weld heat treatment. Pivot mounts and hub clamp were machined from rolled solid. Cast blocks are easy to obtain but rolled offers slightly greater grain alignment but are harder to come by. Sheet sections are 3mm thick in the H111
+          condition, rolled and pressed using my old flypress and rollers and then welded with 5356 rods. The old equipment is great; solid cast iron. I am adamant in years to come equipment like this will be the cherished jewels. 
+          <div class="image-right-container2">
           <img src="img/34.jpg" class="image-right" width="170px">
           <div class="image-text">
             Cushless drive, hub and axle - 2.4Kg reduction in reciprocating mass
           </div>
-        </div>
-
-        <div class="grid-narrow-center">
-          <h2>The result</h2>
-          Now I know what you’re thinking; where’s the consistency? No food was allowed in or out of the tester once testing commenced and the measurements were done a few times. The new swingarm is constructed with 5083 sheet throughout purely because it avoids the
-          need for post weld heat treatment. Pivot mounts and hub clamp were machined from rolled solid. Cast blocks are easy to obtain but rolled offers slightly greater grain alignment but are harder to come by. Sheet sections are 3mm thick in the H111
-          condition, rolled and pressed using my old flypress and rollers and then welded with 5356 rods. The old equipment is great; solid cast iron. I am adamant in years to come equipment like this will be the cherished jewels. 
-          
-        </div>
-		
-		<div class="image-left-container" width="400px">
-          <img src="img/swingarm lower.jpg" class="image-left" width="380px">
-          <div class="image-text">
-            Formed panels trimmed ready for welding
-          </div>
-        </div>
-		
+		  </div>
+		</div>	
         <div class="grid-left-two">
           <h2>Other additions</h2>
-          To finish of the fabrication I made a cushless drive hub along with a new eccentric hub and spindle of my own design to give greater resistance to radial loads. I would have prefered to use a 7000 series aluminium for the construction of the rear arm; 
+		  To finish off the fabrication I made a cushless drive sprocket carrier along with a new eccentric hub and spindle of my own design to give greater resistance to radial loads. I would have prefered to use a 7000 series aluminium for the construction of the rear arm; 
 		  such as 7020. It offers greater tensile strength per relative thickness of section used in comparison to 5083, however 7020 is hard to come by and expensive in particular sizes. It's also likely to require heat treatment and post machining processes 
-		  to compensate for the distortion. Mine will be slightly heavier as a result due to the use of thicker section sizes. It will be favourable to the bikes weight distribution at least which is currently somewhat biased the front: Cue the carbon front fork project!
+		  to compensate for the distortion. Mine will be slightly heavier as a result due to the use of thicker section sizes. It will be favourable to the bikes weight distribution at least, which is currently somewhat biased the front: Cue the carbon front fork project!
         </div>
+		
       </div>
     </div>
     <div id="footer-background">
