--- a/Chassis.html
+++ b/Chassis.html
@@ -70,12 +70,12 @@
 			<li id="nav-support" class="dropdown">
               <a href="./Techjournals.html" class="dropbtn">Tech Journals</a>
             <div class="dropdown-content">
-			<a href="./Chassis.html" target="_blank">Chassis</a>
-            <a href="./Swingarm.html" target="_blank">Swingarm</a>
-            <a href="./Engine.html" target="_blank">Engine</a>
-            <a href="./Aero.html" target="_blank">Aero</a>
-            <a href="./Cooling.html" target="_blank">Cooling</a>
-            <a href="./exhausts.html" target="_blank">Exhausts</a>
+			<a href="./Chassis.html">Chassis</a>
+            <a href="./Swingarm.html">Swingarm</a>
+            <a href="./Engine.html">Engine</a>
+            <a href="./Aero.html">Aero</a>
+            <a href="./Cooling.html">Cooling</a>
+            <a href="./exhausts.html">Exhausts</a>
 			</div>
 			</li>
 			<li id="nav-data" class="">
@@ -84,6 +84,9 @@
             <li id="nav-data" class="">
             <a href="./Events.html">Events</a>
             </li>
+			<li id="nav-data" class="">
+            <a href="./Sale.html">Sale</a>
+			</li>
 			</ul>
 			</div>
 			<!--/.nav-collapse -->
@@ -110,6 +113,7 @@
       </div>
 	  
 	  <div class="image-right-container" width="450px">
+	  <a target="_blank" href="img/framemachine2.jpg">
           <img src="img/framemachine.jpg" class="image-right" width="430px">
           <div class="image-text">
             Trueing the mounting points on the Bridgeport
@@ -126,10 +130,12 @@
       <div class="grid-right-three">
         <h2> Linear rising rate suspension</h2>
 		<div class="image-right-container" width="450px">
+		<a target="_blank" href="img/prototyping2.jpg">
           <img src="img/prototyping.jpg" class="image-right" width="430px">
           <div class="image-text">
             Examples of some of the prototype linkages and wishbones
           </div>
+		  <a target="_blank" href="img/linkages2.jpg">
 		  <img src="img/linkages.jpg" class="image-right" width="430px">
           <div class="image-text">
             Experimental shock and steering linkages
@@ -140,7 +146,8 @@
       </div>
 	  
 	  <div class="image-left-container" width="270px">
-          <img src="img/2017linkage.jpg" class="image-left" width="250px">
+          <a target="_blank" href="img/2017linkage2.jpg">
+		  <img src="img/2017linkage.jpg" class="image-left" width="250px">
           <div class="image-text">
             The 2017 setup; 100% linear rising rate
           </div>
