--- a/Introduction.html
+++ b/Introduction.html
@@ -77,6 +77,9 @@
             <li id="nav-data" class="">
             <a href="./Events.html">Events</a>
             </li>
+			<li id="nav-data" class="">
+            <a href="./Sale.html">Sale</a>
+			</li>
 			</ul>
 			</div>
 			<!--/.nav-collapse -->
@@ -103,17 +106,17 @@
           not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere. The styling and designs are all my own work; right from the oil pump to the fairings. Some components only see minutes of use only to be stored in wake of new improved designs.
           <div class="image-right-container" width="350px">
 		  <div class="banner3">
-			<a target="_blank" href="img/00222.jpg">
-			<img src="img/0022.jpg" class="category-banner" alt="2018 progress"></a>
-			<span class="image-text-banner">Developments in 2017</span>
+			<a target="_blank" href="img/0022.jpg">
+			<img src="img/00222.jpg" class="category-banner" alt="2018 progress"></a>
+			<span class="image-text-banner">Under the fairings</span>
 			</div>
 		  </div>
         </div>
         <div class="grid-left-two">
           <h2>The business</h2>
-          A few years passed by where I persisted to run an engine tuning workshop and sub contract as an engineer to make up a busy 7 day working week. In that time I took the VFR in fairly standard trim; albeit with my own fairings, exhaust and mildly tuned engine to the
+          I ran an engine tuning workshop and sub contracted as an engineer to make up a busy 7 day working week. In that time I took the VFR in fairly standard trim; albeit with my own fairings, exhaust and mildly tuned engine to the
           southern 100 amongst many club races for 2 years along with a 2nd modern bike to keep my eye in whilst I developed the VFR. The modern bikes kept me sharp for a while until a foolish crash in the Isle of Man in 2014 prompted me to make a change. When lying
-          in the helicopter on the way Nobles hospital I decided that I was done with the boredom of modern racing; tired of the bikes with excessively priced bling. The hay days of riding for teams and sponsers were long gone and 
+          in the helicopter on the way Nobles hospital I decided that I was done with the boredom of modern racing. The hay days of sponsered rides were long gone and 
 		  at the time I had spent my hard earned money
           on my 1 year old Triumph 675R which got me to 15th in the southern 100 supersport 600 class before I got a chance to start pushing. <br>
 		  At the same time I had learned that working on other people's bikes and turning out tuned engines for club racers wasn't going to teach me more than I already knew.
@@ -126,9 +129,11 @@
       <div class="grid-right-three">
         <h2>Getting stuck in</h2>
         <div class="image-left-container" width="390px">
-          <img src="img/main.jpg" class="image-left" width="370px">
-          <div class="image-text">
-            Developments in 2017
+		<div class="banner3">
+			<a target="_blank" href="img/main2.jpg">
+			<img src="img/main.jpg" class="category-banner" alt="2018 progress"></a>
+			<span class="image-text-banner">How it looked in 2017</span>
+			</div>
           </div>
         </div>
         Drying the sand and compressing it in to produce a hot bend in T45 tube took a lot of patience and perhaps a year of many bends to get that real feel for what’s
@@ -140,7 +145,7 @@
 	  </div>
       <div class="grid-wide-center">
         <h2>So who am I?</h2>
-        My name is Tom Parkes, I’m 31 at the time of writing this and have been designing, building and racing my own chassis for 4 years. At slower speeds it’s the
+        I’m 31 at the time of writing this and have been designing, building and racing my own chassis for 4 years. At slower speeds it’s the
         best bike I’ve ever ridden; smooth, solid and exciting, with a useful ability to steer wherever you want whilst your braking. The deeper I go, the more sense it makes; the big OEM’s are bound by performance metrics; fearful of research and
         design with professional rider’s balls bursting for success. Who would want to risk it all and fail?
 		Despite not getting on the podium at the toughest race tracks in the world; I believe it has huge potential and in what I can do.
@@ -151,7 +156,7 @@
             Tom Parkes
           </div>
         </div>
-        Motivation has been easy to find as the project has picked up momentum as I try to challenge the blind convention. The machining skills and fabrication ability is all learnt on the go and self taught. When I was 19 I was fortunate to be trained on a lathe by a good friend of my father's. It was better than tuition; he didn't teach me how to operate it but instead provoked me to learn by feel.
+        Motivation has been easy to find as the project has picked up momentum as I try to challenge the blind convention. The machining skills and fabrication ability is always evolving and self taught. When I was 19 I was fortunate to be trained on a lathe by a good friend of my father's. It was better than tuition; he didn't teach me how to operate it but instead provoked me to learn by feel.
 		<br>
 		People would recite that gearbox's were the work of the devil and I should never peak inside or I would be haunted for
         eternity. My sense of curiosity immediately wanted in; and once inside, I found it quite easy. I was about 19 at the time and as new challenges came and went I found I wasn't phased by much, buying the tools and machines I needed to do the job, some things just needed more concentration than others. I'm strangely not a great fan of all things motorcycle. I don't keep upto date with
