--- a/Techjournals.html
+++ b/Techjournals.html
@@ -26,7 +26,7 @@
     <script type='text/javascript' src="scripts/script.js"></script>
     <style>
       html {
-        background: url("img/039.jpg") no-repeat center center fixed;
+        background: url("img/0022.jpg") no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
@@ -66,7 +66,7 @@
                 <a href="./Aero.html">Aero</a>
                 <a href="./Cooling.html">Cooling</a>
                 <a href="./exhausts.html">Exhausts</a>
-              </div>
+				</div>
             </li>
             <li id="nav-data" class="">
               <a href="./Contact.html">Contact</a>
@@ -74,6 +74,9 @@
             <li id="nav-data" class="">
               <a href="./Events.html">Events</a>
             </li>
+			<li id="nav-data" class="">
+            <a href="./Sale.html">Sale</a>
+			</li>
           </ul>
         </div>
         <!--/.nav-collapse -->
@@ -107,6 +110,9 @@
         </div>
         <div class="support-link">
           <a href="./exhausts.html">Exhausts</a>
+        </div>
+		 <div class="support-link">
+          <a href="./Sale.html">Exhausts</a>
         </div>
       </div>
     </div>
