--- a/Contact.html
+++ b/Contact.html
@@ -81,6 +81,9 @@
             <li id="nav-data" class="">
             <a href="./Events.html">Events</a>
             </li>
+			<li id="nav-data" class="">
+            <a href="./Sale.html">Sale</a>
+			</li>
 			</ul>
 			</div>
 			<!--/.nav-collapse -->
