--- a/Events.html
+++ b/Events.html
@@ -80,6 +80,9 @@
             <li id="nav-data" class="">
             <a href="./Events.html">Events</a>
             </li>
+			<li id="nav-data" class="">
+            <a href="./Sale.html">Sale</a>
+			</li>
 			</ul>
 			</div>
 			<!--/.nav-collapse -->
