--- a/Swingarm.html
+++ b/Swingarm.html
@@ -65,12 +65,12 @@
 			<li id="nav-support" class="dropdown">
               <a href="./Techjournals.html" class="dropbtn">Tech Journals</a>
             <div class="dropdown-content">
-			<a href="./Chassis.html" target="_blank">Chassis</a>
-            <a href="./Swingarm.html" target="_blank">Swingarm</a>
-            <a href="./Engine.html" target="_blank">Engine</a>
-            <a href="./Aero.html" target="_blank">Aero</a>
-            <a href="./Cooling.html" target="_blank">Cooling</a>
-            <a href="./exhausts.html" target="_blank">Exhausts</a>
+			<a href="./Chassis.html">Chassis</a>
+            <a href="./Swingarm.html">Swingarm</a>
+            <a href="./Engine.html">Engine</a>
+            <a href="./Aero.html">Aero</a>
+            <a href="./Cooling.html">Cooling</a>
+            <a href="./exhausts.html">Exhausts</a>
 			</div>
 			</li>
 			<li id="nav-data" class="">
@@ -79,6 +79,9 @@
             <li id="nav-data" class="">
             <a href="./Events.html">Events</a>
             </li>
+			<li id="nav-data" class="">
+            <a href="./Sale.html">Sale</a>
+			</li>
 			</ul>
 			</div>
 			<!--/.nav-collapse -->
@@ -104,6 +107,7 @@
         <div class="grid-span">
           <h2>The history behind it</h2>
 		   <div class="image-right-container" width="400px">
+		   <a target="_blank" href="img/112.jpg">
           <img src="img/11.jpg" class="image-right" width="380px">
           <div class="image-text">
             Hub clamp: Ripper cut on the Bridgeport using a rotary table
@@ -124,7 +128,7 @@
 		
 		<div class="banner">
 			<div class="banner2">
-			<a target="_blank" href="img/concrete_castin_box2.jpg">
+			<a target="_blank" href="img/concrete_casting_box2.jpg">
 			<img src="img/concrete_casting_box.jpg" class="category-banner" alt="Casting box"></a>
 			<span class="image-text-banner">Basic casting box construction</span>
 			</div>
@@ -158,6 +162,7 @@
         </div>
 		
 		<div class="image-left-container" width="400px">
+		<a target="_blank" href="img/steel_pressings2.jpg">
           <img src="img/steel_pressings.jpg" class="image-left" width="380px">
           <div class="image-text">
             Simple but effective press tools
@@ -170,6 +175,7 @@
           need for post weld heat treatment. Pivot mounts and hub clamp were machined from rolled solid. Cast blocks are easy to obtain but rolled offers slightly greater grain alignment but are harder to come by. Sheet sections are 3mm thick in the H111
           condition, rolled and pressed using my old flypress and rollers and then welded with 5356 rods. The old equipment is great; solid cast iron. I am adamant in years to come equipment like this will be the cherished jewels. 
           <div class="image-right-container2">
+		  <a target="_blank" href="img/342.jpg">
           <img src="img/34.jpg" class="image-right" width="170px">
           <div class="image-text">
             Cushless drive, hub and axle - 2.4Kg reduction in reciprocating mass
