--- a/Introduction.html
+++ b/Introduction.html
@@ -135,7 +135,7 @@
 			<span class="image-text-banner">How it looked in 2017</span>
 			</div>
           </div>
-        </div>
+        
         Drying the sand and compressing it in to produce a hot bend in T45 tube took a lot of patience and perhaps a year of many bends to get that real feel for what’s
         going on. Every technical hurdle would spark a spell of research through textbooks but something I was always adamant of was to preserve my focus for first principle; steering away from any prior design. If it exists I’m not interested.
 		That way I felt my mind would have a greater chance of conjuring up something new which wasn’t a result of computer simulation pre-configured, logical algorithms which exist based on old theories
@@ -164,13 +164,13 @@
 		
 		<br>
 		
-        
-      </div <div class="grid-narrow-center">
+        </div>
+      <div class="grid-narrow-center">
       <h2>Look out for other new projects</h2>
       Keep an eye out for the new carbon fibre Parkes mountain bike project; trialling a new suspension system.
     </div>
   </div>
-</div>
+
 <div id="footer-background">
   <p>
     <span style="font: 3.5em 'Oswald', sans-serif">
