--- a/Swingarm.html
+++ b/Swingarm.html
@@ -107,10 +107,10 @@
         <div class="grid-span">
           <h2>The history behind it</h2>
 		   <div class="image-right-container" width="400px">
+		   <div class="banner3">
 		   <a target="_blank" href="img/112.jpg">
-          <img src="img/11.jpg" class="image-right" width="380px">
-          <div class="image-text">
-            Hub clamp: Ripper cut on the Bridgeport using a rotary table
+           <img src="img/11.jpg" class="category-banner" alt="Hub clamp"></a>
+			<span class="image-text-banner">Hub clamp: Ripper cut on the Bridgeport using a rotary table</span>           
           </div>
         </div>
           I have always experienced unwanted flex as I up the pace on corner entry. A full body weave as if it were hinged in the middle when at full lean on harsh bumps. The frame is still a work in progress but
@@ -162,11 +162,11 @@
         </div>
 		
 		<div class="image-left-container" width="400px">
+		<div class="banner3">
 		<a target="_blank" href="img/steel_pressings2.jpg">
-          <img src="img/steel_pressings.jpg" class="image-left" width="380px">
-          <div class="image-text">
-            Simple but effective press tools
-          </div>
+		<img src="img/steel_pressings.jpg" class="category-banner" alt="steel pressings"></a>
+		<span class="image-text-banner">Simple but effective press tools</span>
+		</div>
         </div>
 		
           <div class="grid-narrow-center">
@@ -174,14 +174,15 @@
           The new swingarm is constructed with 5083 sheet throughout purely because it avoids the
           need for post weld heat treatment. Pivot mounts and hub clamp were machined from rolled solid. Cast blocks are easy to obtain but rolled offers slightly greater grain alignment but are harder to come by. Sheet sections are 3mm thick in the H111
           condition, rolled and pressed using my old flypress and rollers and then welded with 5356 rods. The old equipment is great; solid cast iron. I am adamant in years to come equipment like this will be the cherished jewels. 
-          <div class="image-right-container2">
-		  <a target="_blank" href="img/342.jpg">
-          <img src="img/34.jpg" class="image-right" width="170px">
-          <div class="image-text">
-            Cushless drive, hub and axle - 2.4Kg reduction in reciprocating mass
           </div>
+		  <div class="image-right-container" width="250px">
+		  <div class="banner2">
+		  <a target="_blank" href="img/342.jpg">
+          <img src="img/34.jpg" class="category-banner" alt="cushless drive"></a>
+		  <span class="image-text-banner">Cushless drive, hub and axle - 2.4Kg reduction in reciprocating mass</span>
 		  </div>
-		</div>	
+		  </div>
+			
         <div class="grid-left-two">
           <h2>Other additions</h2>
 		  To finish off the fabrication I made a cushless drive sprocket carrier along with a new eccentric hub and spindle of my own design to give greater resistance to radial loads. I would have prefered to use a 7000 series aluminium for the construction of the rear arm; 
