--- a/exhausts.html
+++ b/exhausts.html
@@ -111,32 +111,38 @@
 			
 			
 	  		<div class="image-left-container" width="360px">
+			<div class="banner4">
 			<a target="_blank" href="img/ti_can2.jpg">
           <img src="img/ti_can.jpg" class="category-banner" alt="exhaust can"></a>
           <span class="image-text-banner">Grade 2 fusion welded titanium silencer just 510g</span>
             </div>
+			</div>
         
 		<h2 align="left">The history behind it</h2>
         In my early days of tinkering I bought quite a trick pipe bending table but it just wasn’t upto thin walled tube, especially the shapes I wanted to produce. I really needed to be able to offer each section up to the engine and frame which is nearly impossible to do with both cold and hot bends. The sand filled bend is great but only if the exhaust comes first and the rest of the body and electrics follows.
 My first few systems were done the hard way. I was cutting each section with an angle grinder and trying to get them flat with a flap wheel. Do that 100 times and you’ll start dreaming of a chop saw too. Invariably there were gaps because I didn’t put argon in the pipes too.
 By the time I came around to make my first v4 system I did a back to back trial on the dyno with a mandrel bent tube system and discovered something interesting. You would think that the tiny burrs and lips created from joining multiple sections of pipe together in short succession would create disruptive interference with the passing pressure waves. Conversely; it enhanced scavenging effects and resulted in a modest power gain across the mid and top end power range.
-      </div>
+      <div class="image-right-container" width="360px">
+	  <div class="banner3">
+          <a target="_blank" href="img/exhaust_with_strap2.jpg">
+		  <img src="img/exhaust_with_strap.jpg" class="category-banner" alt="silencer section"></a>
+          <span class="image-text-banner">Sections rolled and fusion welded</span>
+		  </div>
+	  	  </div>
+	  </div>
       <div class="grid-left-two">
         <h2 align="left">Where it came from</h2>
         Most lobster sections are made for aesthetic reasons. I have come across very old practicle experiments referring to the unpredictable wizardry of tumbling harmonic waves and the scavenging pressures they induce, but at a glance I don't believe many in the market are exploiting this predominantly due to the high manufacturing costs. It is also difficult to reproduce the effects as the designs and pipe layouts change.
 		Naturally the size, length, taper and collector type make up the majority of the tuning characteristics of an exhausts. From just the small success I have found I think it would be interesting to explore meadians other than tube that give rise to turbulant flow with sequencial changes from low to high pressure.
-      <div class="image-left-container" width="360px">
-          <a target="_blank" href="img/silencersections2.jpg">
-		  <img src="img/silencersections.jpg" class="category-banner" alt="silencer section"></a>
-          <span class="image-text-banner">Sections modelled in CAD printed out as templates</span>
-		  </div>
-	  	  </div>
+       </div>
       <div class="grid-right-three">
         <h2 align="left"> More is better</h2>
 		<div class="image-right-container" width="290px">
+		<div class="banner4">
 		<a target="_blank" href="img/0032.jpg">
 		<img src="img/003.jpg" class="category-banner" alt="exhaust pipes"></a>
           <span class="image-text-banner">Fusion welded header pipes</span>
+		  </div>
 		  </div>
         It’s a real shame that exhaust manufactures don’t advertise the benefits and trade off’s for various exhaust designs. They seem to offer the one and only ‘off the shelf’ solution for that bike with a choice of pretty silencers. There’s not one tyre that does all grounds and conditions; most have a sticker with ratings for economy and wet road handling. Imagine what a tyre would perform like if they got rid of this and kept you in the dark and simply gave you what you thought was best for everyone and how much better the bike next to you would go if he knew what tyre he (or she) needed! As competition and skills develop the demand for performance is greater. Unfortunately the average buyer wants a top end power ballad from their exhaust, so the market has followed the demand; can’t blame them. Perhaps only a handful of others utilise a well designed exhaust which can really complement a high performance engine. The significance is far greater for 2 strokes but certainly credible for 4 strokes.
 	  </div>
