--- a/Sales.html
+++ b/Sales.html
@@ -108,7 +108,7 @@
       <div class="grid-span">
         <h2>Tony Scott 52mm stroke crankshaft</h2>
 		This is supposidly the one remaining long stroke crankshaft; designed by Tony Scott and made by Honda on his behalf. Used by Milky Quale in the isle of man TT and most recently used by Tom Parkes between 2017-2018. It has now been put up for sale to fund the manufacture of shorter stroke; higher revving crankshaft.
-		What you get is the 52mm stroke crankshaft complete with Carrilo rods and bearing shells. Dial guage runout shows it nice and straight. The rods have completed 75 race miles from new and were custom made to my design by Carillo in America for £2000
+		What you get is the 52mm stroke crankshaft complete with Carrilo rods and bearing shells. The rods have completed approximately 100 race miles from new along with 4 hours of dyno tuning. They were custom made to my design by Carillo in America for £2000
 			<div class="banner">
 			<div class="banner2">
 			<a target="_blank" href="img/52mmcrank2.jpg">
@@ -121,13 +121,16 @@
       <div class="grid-left-two">
         <h2>HRC kit cylinder heads complete</h2>
 		These are a pair of kit cylinder heads used by Honda racing team. The valve springs, camshafts and spring washers are all kit components. The valve springs all measure within 0.1mm of each other showing excellent condition.
-      The cam sprockets are adjustable and are currently set to normally supplied kit specification:
-	  Inlet 
-	  Exhausts
-	  The specification of the lift:
-	  Exhaust: 8.2mm
-	  Inlet: 9.5mm
-	  Be advised that you should check you piston to valve clearance on assembly to ensure adequate clearance for your application as the inlet in particular has much higher lift than standard
+      The cam sprockets are adjustable and are currently set to normally supplied kit specification:<pr>
+	  inlet opens 23 btdc<pr>
+      closes 52 abdc<pr>
+	  exhaust opens 50 bbdc<pr>
+	  closes 20 atdc <pr>
+	  (measured at 1mm lift)<pr>
+	  The specification of the lift:<pr>
+	  Exhaust: 8.5mm <pr>
+	  Inlet: 9.5mm <pr>
+	  Be advised that you should check your piston to valve clearance on assembly to ensure adequate clearance for your application as the inlet in particular has much higher lift than standard
 	  The cam sprockets are interchangable between front and rear sprockets and allow material to be skimmed off the cylinder head to reduce gear backlash and raise compression. This is achieved due to the cam sprockets being marginally undersize. The amount they are undersize is stamped on each sprocket (0.5mm and 0.6mm options). The sprockets are interchangable between inlet and exhaust aswell as between front and rear cylinder heads.
 			<div class="banner">
 			<div class="banner2">
@@ -137,12 +140,25 @@
 			</div>
 		    </div>
 			</div>
+			
+			<div class="grid-span">
+        <h2>HRC kit valve springs</h2>
+		Spare kit springs to suit a HRC head setup. These springs give much higher pressures at base and full lift to prevent unwanted valve reverberations and bounce at high RPM. The springs should be used with the right spring seats to set the correct installed height and pressure.
+		The springs are in immaculate condition; all measuring to new sizes.
+			<div class="banner">
+			<div class="banner2">
+			<a target="_blank" href="img/valve_springs2.jpg">
+			<img src="img/valve_springs2.jpg" class="category-banner" alt="long stroke crank"></a>
+			<span class="image-text-banner">Valve Springs</span>
+			</div>
+		    </div>
+			</div>
 		  		
       <div class="grid-wide-center">
         <h2>Exhausts</h2>
 		Here for sale is a 4-2 lobster section exhaust system to suit a vfr800. The system is designed to work with cylinders firing on 450 degree separation so that the scavenging effect pulls exhaust gases from the linked cylinders to best aid mid range gas flow.
-		The sizes used are very similar to that of a WSB HRC RC45 and work best with throttle bodies of 42mm bore size.
-		The primary lengths are slightly uneven in length to give a broader torque range. See the attached dyno file to show the power produced using this exhaust system. Note that in order to benefit from this system, larger throttle bodies, high lift camshaft with longer duration and ported cylinder heads are required, as well as refined fuelling and igntion adjustment.
+		The primary and secondary pipe sizes used are very similar to that of a WSB HRC RC45 and work best with throttle bodies between 42-45mm bore size.
+		The primary lengths are slightly uneven in length to give a broader torque range. See the attached dyno file to show the power produced using this exhaust system. Note that in order to benefit from this system, larger throttle bodies, high lift camshaft with longer duration and ported cylinder heads are required, as well as refined fuelling and igntion adjustment. The dyno chart attached was from a tuned engine with all of these along with 42mm throttle bodies in an 838cc engine.
 		The system was made using 0.9mm thick stainless steel. The end cans are PARKES titanium design and weigh just 0.5kg each.
 		The full system weighs .....
 			<div class="banner">
@@ -155,8 +171,8 @@
 			</div>
 		
       <div class="grid-narrow-center">
-        <h2>Dry clutch conversion</h2>
-		This kit comprises a new sand cast outter engine cover complete with output shaft seal. The clutch is a PARKES slipper clutch with copper sintered plates.
+        <h2>Dry clutch conversion (Available 2019)</h2>
+		This kit comprises a new sand cast outter engine cover complete with output shaft seal. The clutch is a basket is machined from 7075 and hard anodised.
 		The kit is interchangeable between a vfr800 and RC45 using the same plates and spring tension.
 		With these race derived parts you can expect gains due to a reduction of components creating oil drag and less oil contamination through clutch plate degradation in the oil bath.
 		It would not be suitable to use this kit on the round as inadequate air flow to the clutch pack would cause accelerated damage to the plates.
